tests/baselines/reference/propertiesAndIndexers2.errors.txt
tests/cases/compiler/propertiesAndIndexers2.ts(2,5): error TS2413: 'number' index type 'string' is not assignable to 'string' index type 'number'.
  Type 'string' is not assignable to type 'number'.
tests/cases/compiler/propertiesAndIndexers2.ts(8,5): error TS2411: Property 'c' of type 'string' is not assignable to 'string' index type 'number'.
tests/cases/compiler/propertiesAndIndexers2.ts(13,5): error TS2411: Property '"-NaN"' of type 'string' is not assignable to 'string' index type 'number'.
tests/cases/compiler/propertiesAndIndexers2.ts(14,5): error TS2411: Property '6' of type '() => string' is not assignable to 'number' index type 'string'.


==== tests/cases/compiler/propertiesAndIndexers2.ts (4 errors) ====
    interface A {
        [n: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2413: 'number' index type 'string' is not assignable to 'string' index type 'number'.
!!! error TS2413:   Type 'string' is not assignable to type 'number'.
        [s: string]: number;
    }
    
    // All of these should fail.
    interface B extends A {
        c: string;
        ~
!!! error TS2411: Property 'c' of type 'string' is not assignable to 'string' index type 'number'.
        3: string;
        Infinity: string;
        "-Infinity": string;
        NaN: string;
        "-NaN": string;
        ~~~~~~
!!! error TS2411: Property '"-NaN"' of type 'string' is not assignable to 'string' index type 'number'.
        6(): string;
        ~~~~~~~~~~~~
!!! error TS2411: Property '6' of type '() => string' is not assignable to 'number' index type 'string'.
    }
    